--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-stat-tab/pokemon-stat-tab.component.html
@@ -68,3 +68,70 @@
     </div>
   </div>
 </div>
+<h2 class="color" [ngClass]="pokemon.types[0].type.name">WEAKNESSES</h2>
+
+<h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[0].length > 0">x4</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[0]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div>
+
+<h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[1].length > 0">x2</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[1]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div>
+
+<!--h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[2].length > 0">x1</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[2]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div-->
+
+<h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[3].length > 0">x0.5</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[3]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div>
+
+<h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[4].length > 0">x0.25</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[4]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div>
+
+<h2 class="color" [ngClass]="pokemon.types[0].type.name" *ngIf="getTypeWeaknesses()[5].length > 0">x0</h2>
+
+<div class="types">
+  <div class="type" [ngClass]="getPokemonEnglishType(typeId)" *ngFor="let typeId of getTypeWeaknesses()[5]">
+    <div class="typeIcon">
+      <img src="assets/images/typeIcons/{{getPokemonEnglishType(typeId)}}.svg"/>
+    </div>
+    <p [ngClass]="getPokemonEnglishType(typeId)">{{getPokemonType(typeId)}}</p>
+  </div>
+</div>
