--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -128,7 +128,6 @@ $iconwater    : #539DDF;
   display: none;
 }
 
-
 .content .imgBx img
 {
   display: block;
@@ -136,6 +135,8 @@ $iconwater    : #539DDF;
   margin-top: 3rem;
   margin: 30px auto auto auto;
   width: 70%;
+
+  cursor: pointer;
 }
 
 .types{
