--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -95,9 +95,14 @@ $iconwater    : #539DDF;
   float: left;
   font-size: 40px;
   font-weight: bold;
-  padding: 15px;
+  padding: 14px;
   color: $black;
   cursor: pointer;
+  z-index: 50;
+
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+  margin: 10px;
 }
 
 //Content
