--- a/pokedex/src/app/navbar/navbar.component.html
+++ b/pokedex/src/app/navbar/navbar.component.html
@@ -10,6 +10,14 @@
         <ul>
           <li><a (click)="setLanguage('en')">English (English)</a></li>
           <li><a (click)="setLanguage('fr')">Francais (French)</a></li>
+          <li><a (click)="setLanguage('ja')">日本人 (Japanese)</a></li>
+          <li><a (click)="setLanguage('ko')">한국인 (Korean)</a></li>
+          <li><a (click)="setLanguage('zh')">中国人 (Chinese)</a></li>
+          <li><a (click)="setLanguage('de')">Deutsch (German)</a></li>
+          <li><a (click)="setLanguage('es')">Española (Spanish)</a></li>
+          <li><a (click)="setLanguage('it')">Italiano (Italian)</a></li>
+          <!--li><a (click)="setLanguage('cs')">čeština (Czech)</a></li>
+          <li><a (click)="setLanguage('pt-BR')">Português (Portuguese)</a></li-->
         </ul>
       </li>
       <!--li><a>Dropdown <b>▼</b></a>
