--- a/pokedex/src/app/navbar/navbar.component.scss
+++ b/pokedex/src/app/navbar/navbar.component.scss
@@ -149,6 +149,11 @@ header ul li ul li
     left: 0;
   }
 
+  header nav ul li ul a
+  {
+  padding: 5px 25px;
+  }
+
   .toggle
   {
     position: relative;
