--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-evolution-tab/pokemon-evolution-tab.component.scss
@@ -50,7 +50,7 @@ p
   flex-direction: column;
   cursor: pointer;
 }
-.evolutionBox .pokemon p
+.pokemon p
 {
   font-size: 0.8rem;
   font-weight: 600;
