--- a/pokedex/src/app/home/home.component.html
+++ b/pokedex/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec,
       ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa,
       varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy</p>
-    <a href="#">Learn More</a>
+    <a>Learn More</a>
   </div>
   <div class="imgBox">
     <img src="{{currentPokemon}}" alt="Pokemon25" class="pokemon">
