--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-move-tab/pokemon-move-tab.component.scss
@@ -4,6 +4,25 @@ $darkGray : #535353;
 $lightGray: #CACACA;
 $white    : #F5F5F5;
 
+$bug      : #8CB230;
+$dark     : #58575F;
+$dragon   : #0F6AC0;
+$electric : #FFCE4B;
+$fairy    : #FE55A6;
+$fighting : #FF3850;
+$fire     : #FF8C38;
+$flying   : #748FC9;
+$ghost    : #556AAE;
+$grass    : #39E23F;
+$ground   : #DD7748;
+$ice      : #61CEC0;
+$normal   : #9DA0AA;
+$poison   : #9F5BBA;
+$psychic  : #EA5D60;
+$rock     : #BAAB82;
+$steel    : #417D9A;
+$water    : #4BC9FF;
+
 $iconbug      : #92BC2C;
 $icondark     : #595761;
 $icondragon   : #0C69C8;
@@ -73,10 +92,17 @@ p.method.bug{color: $lightGray}p.method.dark{color: $midBlack}p.method.dragon{co
   word-wrap: break-word;
 }
 
+.moveTable th{
+  cursor: pointer;
+}
+
+.th1-bug p{color: $bug;}.th1-dark p{color: $dark;}.th1-dragon p{color: $dragon;}.th1-electric p{color: $electric;}.th1-fairy p{color: $fairy;}.th1-fighting p{color: $fighting;}.th1-fire p{color: $fire;}.th1-flying p{color: $flying;}.th1-ghost p{color: $ghost;}.th1-grass p{color: $grass;}.th1-ground p{color: $ground;}.th1-ice p{color: $ice;}.th1-normal p{color: $normal;}.th1-poison p{color: $poison;}.th1-psychic p{color: $psychic;}.th1-rock p{color: $rock;}.th1-steel p{color: $steel;}.th1-water p{color: $water;}
+.th2-bug p{color: $bug;}.th2-dark p{color: $dark;}.th2-dragon p{color: $dragon;}.th2-electric p{color: $electric;}.th2-fairy p{color: $fairy;}.th2-fighting p{color: $fighting;}.th2-fire p{color: $fire;}.th2-flying p{color: $flying;}.th2-ghost p{color: $ghost;}.th2-grass p{color: $grass;}.th2-ground p{color: $ground;}.th2-ice p{color: $ice;}.th2-normal p{color: $normal;}.th2-poison p{color: $poison;}.th2-psychic p{color: $psychic;}.th2-rock p{color: $rock;}.th2-steel p{color: $steel;}.th2-water p{color: $water;}
+
 
 @media (max-width: 911px)
 {
-  
+
   .moveTable td, .moveTable th {
     padding: 4px;
   }
