correction affichage play pause sur telephone (pokemon cry)

--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-cry/pokemon-cry.component.html
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-cry/pokemon-cry.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <button *ngIf="playerReady" (click)="togglePlay()">{{ waveSurfer.isPlaying() ? "⏸" : "⏵"}}</button>
+  <button *ngIf="playerReady" (click)="togglePlay()"><img src="{{getPlayPauseImage()}}" alt="⏵"></button>
   <div #wave></div>
 </div>
